# photo_distributor

./: .env.example  .gitignore  AGENTS.md  PIPELINE.md  README.md  TODO.md  pyproject.toml  run.sh
quality_lab/: DATASET_SCHEMA.md  EVALUATION.md  EXPERIMENT_BASELINES.md  README.md  experiment_baselines.json
scripts/: face_probe.py  publish_yandex_disk_resource.py  quality_lab_attach_label_boxes.py  quality_lab_compare_runs.py  quality_lab_derived_references.py  quality_lab_init_labels.py  quality_lab_label_view.py  quality_lab_metrics.py  quality_lab_reference_diagnostics.py  quality_lab_run.py
src/: app_logging.py  main.py  privacy.py  start_event.py  utils.py
src/face_analysis/: __init__.py  analyzer.py  types.py
src/forms_export/: __init__.py  contracts.py  email_answers.py  ingest.py  participants.py  schema.py
src/mail_client/: __init__.py  client.py
src/photo_distribution/: __init__.py  workflow.py
src/yandex_disk/: client.py  (+2 more)
tests/: client_upload_test.txt  conftest.py  test_face_analysis.py  test_face_analysis_distribution.py  test_forms_email_answers.py  test_forms_export.py  test_image_files.py  test_live_workflow.py  test_mail_client.py  test_main_cli.py  test_photo_distribution.py  test_photo_distribution_apply_distribution_plan.py  test_photo_distribution_cloud_files.py  test_photo_distribution_output_files_structure.py  test_privacy.py  test_quality_lab_freeform_parser.py  test_quality_lab_metrics.py  test_start_event_cli.py  test_yandex_disk_cleanup.py  test_yandex_disk_client.py  test_yandex_disk_ui_access_grantor.py  yandex_disk_helpers.py
(+8 files in other folders)
