[project]
name = "photo-distributor"
version = "0.1.0"
description = "Local prototype for distributing event photos by recognized participants."
readme = "AGENTS.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "opencv-python>=4.10.0",
    "pillow>=10.0.0",
    "pillow-heif>=0.16.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]
experiment-insightface = [
    "insightface>=0.7.3",
    "onnxruntime>=1.18.0",
]
experiment-insightface-gpu = [
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.18.0",
]
experiment-adaface = [
    "torch>=2.5.0",
    "gdown>=5.2.0",
    "pytorch-lightning>=2.5.0",
]
ui-automation = [
    "playwright>=1.45.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
